# diffsan

./: .gitignore  .pysentry.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  configuration.md  contributing.md  index.md
docs/design/: 00-product-brief.md  01-architecture.md  02-contracts-and-schemas.md  03-artifacts-and-events.md  05-test-strategy.md  06-gitlab-integration.md  07-agent-prompting.md  08-decision-log.md  README.md
scripts/: generate_docs_home.py
src/diffsan/: __init__.py  cli.py  run.py
src/diffsan/contracts/: __init__.py  errors.py  events.py  models.py
src/diffsan/core/: __init__.py  agent_codex.py  agent_cursor.py  codex_config.py  config.py  diff_provider.py  fingerprint.py  format.py  gitlab.py  parse_validate.py  preprocess.py  prior.py  prompt.py  skip.py
src/diffsan/io/: __init__.py  artifacts.py  logging.py
tests/: test_agent_codex.py  test_agent_cursor.py  test_codex_config.py  test_config.py  test_diff_provider.py  test_diffsan.py  test_format.py  test_gitlab.py  test_misc_core.py  test_models_defaults.py  test_parse_validate.py  test_preprocess.py  test_prior.py  test_prompt.py  test_run_milestone1.py  test_skip.py
